force-app/main/default/objects/vlocity_cmt__QuoteLineItemPricingAdjustment__c/fields/vlocity_cmt__QuoteId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteId__c</fullName>
    <description>DEPRECATED.</description>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipName>QuoteLineItemPricingAdjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>