force-app/main/default/objects/vlocity_cmt__QuoteLineItemPricingAdjustment__c/fields/vlocity_cmt__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED.</description>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Line Item Pricing Adjustments</relationshipLabel>
    <relationshipName>QuoteLineItemPricingAdjustments</relationshipName>
    <type>Lookup</type>
</CustomField>